# MCP_PurchaseOrderFlow

./: README.md  document_generator_tool.py  document_parser_tool.py  email_monitoring_tool.py  email_response_tool.py  financial_tool.py  main.py  mcppoagent.py  po_email_generator_tool.py  po_record_tool.py  purchase_queue_tool.py  pyproject.toml  report_file_tool.py  restock_inventory_tool.py
data/: inventory.db  purchase_queue.json
