[project]
name = "ptest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai==1.24.0",
    "google-generativeai==0.8.5",
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "paddleocr>=3.1.0",
    "paddlepaddle>=3.1.0",
    "pymongo>=4.13.2",
]
